[package]
name = "vacht"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
interprocess = { version = "2.3.1", features = ["tokio"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
v8 = "146.0.0"
